// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot 1`] = `
<header
  className="header"
>
  <NavLink
    className="main-header"
    to="/newpalette"
  >
    <h1>
      Palette Picker
    </h1>
  </NavLink>
  <div
    className="user-nav"
  >
    <NavLink
      to="/projects"
    >
      <p>
        YOUR PROJECTS
      </p>
    </NavLink>
    <NavLink
      to="/newpalette"
    >
      <p>
        NEW PALETTE
      </p>
    </NavLink>
    <a>
      <p>
        SIGN OUT
      </p>
    </a>
  </div>
</header>
`;

exports[`Header should match snapshot for no username 1`] = `
<header
  className="header"
>
  <NavLink
    className="main-header"
    to="/newpalette"
  >
    <h1>
      Palette Picker
    </h1>
  </NavLink>
  <NavLink
    to="/login"
  >
    <p
      className="login-navlink"
    >
      LOGIN
    </p>
  </NavLink>
</header>
`;
